# huestaceand

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md
include/: huestacean.h  huestaceand.h  room.h  scene.h  server.h  types.h  utility.h
include/devices/: archetypes.h  deviceprovider.h
include/devices/hue/: bridgediscovery.h  entertainment.h  huebridge.h  huediscovery.h
include/effects/: effect.h
src/: huestacean.cpp  huestaceand.cpp  main.cpp  server.cpp  utility.cpp
src/devices/: deviceprovider.cpp
src/devices/hue/: huebridge.cpp  huediscovery.cpp
tests/: api.cpp  test.cpp
